; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_AddIdentityMatrix.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_AddIdentityMatrix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cmsAT_END = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @AddIdentityMatrix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AddIdentityMatrix(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [12 x i32], align 16
  store i32* %0, i32** %2, align 8
  %4 = bitcast [12 x i32]* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %4, i8 0, i64 48, i1 false)
  %5 = bitcast i8* %4 to [12 x i32]*
  %6 = getelementptr inbounds [12 x i32], [12 x i32]* %5, i32 0, i32 0
  store i32 1, i32* %6, align 16
  %7 = getelementptr inbounds [12 x i32], [12 x i32]* %5, i32 0, i32 4
  store i32 1, i32* %7, align 16
  %8 = getelementptr inbounds [12 x i32], [12 x i32]* %5, i32 0, i32 8
  store i32 1, i32* %8, align 16
  %9 = call i32 (...) @DbgThread()
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @cmsAT_END, align 4
  %12 = call i32 (...) @DbgThread()
  %13 = getelementptr inbounds [12 x i32], [12 x i32]* %3, i64 0, i64 0
  %14 = call i32 @cmsStageAllocMatrix(i32 %12, i32 3, i32 3, i32* %13, i32* null)
  %15 = call i32 @cmsPipelineInsertStage(i32 %9, i32* %10, i32 %11, i32 %14)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @cmsPipelineInsertStage(i32, i32*, i32, i32) #2

declare dso_local i32 @DbgThread(...) #2

declare dso_local i32 @cmsStageAllocMatrix(i32, i32, i32, i32*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
